<resources>
    <string name="app_name">Healbe App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home_workout_button">Тренировка</string>
    <string name="home_feed_button">Лента</string>
    <string name="home_measurements_button">Параметры</string>
    <string name="home_settings_button">Настройки</string>
    <string name="home_mainapp_button">На главную</string>
    <string name="home_support_button">Поддержка</string>
    <string name="home_name_text">Ксения</string>
    <string name="home_title_text">Профиль</string>
    <string name="home_avatar_pic">Avatar</string>
    <string name="post_title_text">Публикация</string>
    <string name="feed_title_text">Лента</string>
    <string name="profile_text">Имя</string>
    <string name="workout_title_text">Тренировка</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_workout_in_progress">WorkoutInProgressActivity</string>
    <string name="workout_in_progress_title">Бег</string>
    
    <string-array name="languages_array">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string name="workout_history_line_chart_label">Динамика пульса</string>
    <string name="measurement_height">Рост</string>
    <string name="measurement_weight">Вес</string>
    <string name="measurement_gender">Пол</string>
    <string name="measurement_training_level">Ваш уровень подготовки:</string>
    <string name="measurement_newbie">Новичок</string>
    <string name="measurement_regularity">Вы никогда раньше не тренировались регулярно</string>
    <string name="progress_progress">Прогресс</string>
    <string name="progress_duration">за всё время</string>
    <string name="timer_current_workout">Текущая тренировка</string>
    <string name="timer_bpm_units">уд. мин</string>
    <string name="timer_pulse">Пульс</string>
    <string name="timer_initial_value">0,0</string>
    <string name="timer_distance_units">км</string>
    <string name="timer_time">Время</string>
    <string name="timer_distance">Дистанция</string>
</resources>